Fix minimum page height & hide scrollbars on testing & custom views (#7586)

--- a/console/frontend/src/main/frontend/src/assets/css/style.css
+++ b/console/frontend/src/main/frontend/src/assets/css/style.css
@@ -3503,7 +3503,8 @@ body {
   font-size: 13px;
   color: #676a6c;
   overflow-x: hidden;
-  overflow-y: scroll !important;
+  /*overflow-y: scroll !important;*/
+  overflow-y: scroll;
 }
 html,
 body {
